ProjetoLojadeBebidas avançado Finalizado

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <div id="form">
             <label>Você é maior de 18 anos?</label><br>
-            <a target="_blank" href="maior.html">Sim</a>
-            <a target="_blank" href="menor.html">Não</a>
+            <a target="_blank" href="Maior/maior.html">Sim</a>
+            <a target="_blank" href="Menor/menor.html">Não</a>
 
         </div>
     </main>
