--- a/Maior/maior.html
+++ b/Maior/maior.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/db2c21d7e5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/style_menor.css">
+    <link rel="stylesheet" href="CSS_Maior/style_maior.css">
     <title>Página para maiores de idade</title>
 </head>
 <body>
@@ -24,10 +24,15 @@
         </div>
 
         <div id="mensagem">
-            <h1>Sinto muito, mas este site só é permitido para maiores de 18 anos! :(</h1>
+            <h1>Olá! Gostaria de te dar boas vindas a Cervejaria do Pericles. <br>
+                Aqui você encontrará as melhores bebidas do Brasil!
+            </h1>
 
         </div>
-
+        
+        <div>
+            <a href="site.html" id="botao">Entrar no site</a>
+        </div>
     </main>
 </body>
 </html>
